Update ◈001. select 문의 실행과정 3단계&오라클 db 접속하기.md

--- a/◈001. select 문의 실행과정 3단계&오라클 db 접속하기.md
+++ b/◈001. select 문의 실행과정 3단계&오라클 db 접속하기.md
@@ -13,35 +13,39 @@ select ename, sal
 
 
 ## 오라클 db 접속하기 
-문제1. 실제로 회사에 가면 내 노트북에서 회사 서버실에 오라클 데이터베이스에 어떻게 접속을 하는가 ? 
+🔷**문제1. 실제로 회사에 가면 내 노트북에서 회사 서버실에 오라클 데이터베이스에 어떻게 접속을 하는가 ?** 
 
 - tns정보 찾기 
-tnsnames.ora ←— 내가 접속할 오라클 db의 정보를 등록해줌.
-1) 명령프롬프트창 - 상태 확인
+tnsnames.ora ← 내가 접속할 오라클 db의 정보를 등록해줌
+
+
+**1) 명령프롬프트창 - 상태 확인**
 ```
 (cmd) > lsnrctl status
 ```
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/08691aea-b5b9-4275-80cd-5d0d824962f4/fc9a37c2-2e0b-46e6-b451-e720b2590ec7/Untitled.png)
+<img src="https://github.com/goguma999/newjourney/blob/main/001-1.png" width=600 height=400>
 
-2) 리스너 로그 파일 에 listener.ora가 있는 곳으로 감. tnsnames.ora가 있는 곳 
+**2) 리스너 로그 파일 에 listener.ora가 있는 곳으로 감. tnsnames.ora가 있는 곳**
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/08691aea-b5b9-4275-80cd-5d0d824962f4/dea8c16b-5394-45d4-b28c-0b4059462284/Untitled.png)
+<img src="https://github.com/goguma999/newjourney/blob/main/001-2.png" width=600 height=200>
 
-3) tnsnames.ora를 메모장으로 열기. 
+**3) tnsnames.ora를 메모장으로 열기**
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/08691aea-b5b9-4275-80cd-5d0d824962f4/c638c9d0-467c-4d48-b938-3a751eb42f3d/Untitled.png)
+<img src="https://github.com/goguma999/newjourney/blob/main/001-3.png" width=500 height=400>
 
+```
 - XE : tns별칭
 - localhost : 서버의 아이피 주소
 - SERVICE_NAME = xe
+```
 
-4) 담당자에게서 받은 tsn정보 붙여넣기
+**4) 담당자에게서 받은 tsn정보 붙여넣기**   
 xe = 
-(DESCRIPTION = 
-(ADDRESS = ~
+  (DESCRIPTION =    
+    (ADDRESS = ~
 
-5) pc 설정 
+**5) pc 설정**
 ```
 윈도우 탐색기 —> 
 내pc에서 오른쪽 마우스를 누르고 속성 —>
@@ -55,15 +59,15 @@ sqldeveloper 껐다 키기 —>
 접속—> 
 ```
 
-문제2. 짝꿍 pc의 오라클 데이터베이스에 c##scott 유져로 접속하시오 ! 
-1) 나의 tnsnames.ora의 별칭의 이름을 내 영문 이니셜로 변경 
-2) sqldeveloper 껐다가 키고 그 tnx(amy) 로 접속 
+🔷**문제2. 짝꿍 pc의 오라클 데이터베이스에 c##scott 유져로 접속하시오 !** 
+  1) 나의 tnsnames.ora의 별칭의 이름을 내 영문 이니셜로 변경 
+  2) sqldeveloper 껐다가 키고 그 tnx(amy) 로 접속 
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/08691aea-b5b9-4275-80cd-5d0d824962f4/3326018d-c0c5-479d-b978-88435e61d235/Untitled.png)
+<img src="https://github.com/goguma999/newjourney/blob/main/001-4.png">
 
-3) 
-짝꿍의 정보 확인. 
-tns 맨 아래에 짝꿍 정보를 붙여넣기. 
-방화벽을 해제.
-새로만들기로 접속 ! 
-나올 땐 방화벽 닫기 
+  3) 
+    짝꿍의 정보 확인. 
+    tns 맨 아래에 짝꿍 정보를 붙여넣기. 
+    방화벽을 해제.
+    새로만들기로 접속 ! 
+    나올 땐 방화벽 닫기 
