Update ◈001. select 문의 실행과정 3단계&오라클 db 접속하기.md

--- a/◈001. select 문의 실행과정 3단계&오라클 db 접속하기.md
+++ b/◈001. select 문의 실행과정 3단계&오라클 db 접속하기.md
@@ -15,8 +15,7 @@ select ename, sal
 ## 오라클 db 접속하기 
 🔷**문제1. 실제로 회사에 가면 내 노트북에서 회사 서버실에 오라클 데이터베이스에 어떻게 접속을 하는가 ?** 
 
-- tns정보 찾기 
-tnsnames.ora ← 내가 접속할 오라클 db의 정보를 등록해줌
+- tnsnames.ora : 내가 접속할 오라클 db의 정보를 등록해줌 
 
 
 **1) 명령프롬프트창 - 상태 확인**
