--- a/◈002.  옵티마이져란 무엇인가.md
+++ b/◈002.  옵티마이져란 무엇인가.md
@@ -3,17 +3,19 @@
 - 옵티마이져(optimizer)란?  
   SQL을 가장 효율적이고 빠르게 수행할 수 있는 최적의 처리경로를 선택해주는 오라클 핵심 엔진
 
-002-1
-<img src="https://github.com/goguma999/newjourney/blob/main/004-.png" width=600 height=400>
 
-→ SQL이 들어오면 Query transformer가 SQL을 변경한다. 
- 변경이 필요 없으면 안 하고 변경이 필요하면 변경을 한다.
+<img src="https://github.com/goguma999/newjourney/blob/main/002-1.png" width=600 height=400>
+
+→ SQL이 들어오면 Query transformer가 SQL을 변경한다.   
+ 변경이 필요 없으면 안 하고 변경이 필요하면 변경을 한다.   
  그리고 나서 estimator가 데이터 딕셔너리(user_tables)를 보고
  해당 테이블의 통계정보를 이용해서 실행계획을 plan generator에게
- 만들 수 있도록 한다. 
+ 만들 수 있도록 한다.   
+
+&nbsp;
 
 🔷문제3. 아래의 SQL을 query transformer가 어떻게 변경했는지 확인하시오 !   
- 이걸 확인하는 이유 ?  내가 원하는 실행계획이 안나오는 경우에 확인이 필요합니다.
+ 이걸 확인하는 이유 ?  내가 원하는 실행계획이 안나오는 경우에 확인이 필요
 ```
 select ename, sal, job
   from emp
@@ -28,8 +30,8 @@ select ename, sal, job
 
 select * from table(dbms_xplan.display);
 ```
-002-2
-→ 1 - filter("JOB"='ANALYST' OR "JOB"='SALESMAN')  <-- 이게 보일겁니다. 
+<img src="https://github.com/goguma999/newjourney/blob/main/002-2.png" >
+→ 1 - filter("JOB"='ANALYST' OR "JOB"='SALESMAN')  <-- 이게 보일텐데,
 
 ```
 select ename, sal, job
@@ -37,8 +39,10 @@ select ename, sal, job
   where job ='ANALYST' or job='SALESMAN'; 
 ```
 
-→ 결과가 달라지지 않으면서 비용이 적게드는 SQL로 변경을 스스로 합니다.  
-  옵티마이져 안의 query transformer가.
+→ 결과가 달라지지 않으면서 비용이 적게드는 SQL로 변경을 스스로 한 것.  
+  옵티마이져 안의 query transformer가.   
+
+&nbsp;
 
 🔷문제4. 아래의 SQL을 어떻게 쿼리 변형을 했는지 확인하시오 !
 ```
@@ -57,5 +61,6 @@ select deptno, job, sum(sal)
 select * from table(dbms_xplan.display);
 ```
 
-002-3
-→ temp table transformation 이라고 나오면 *with절*로 쿼리를 변형한 것
+<img src="https://github.com/goguma999/newjourney/blob/main/002-3.png" >
+
+→ ***temp table transformation*** 이라고 나오면 ***with절***로 쿼리를 변형한 것
