Update ◈002.  옵티마이져란 무엇인가.md

--- a/◈002.  옵티마이져란 무엇인가.md
+++ b/◈002.  옵티마이져란 무엇인가.md
@@ -16,13 +16,13 @@
 
 🔷문제3. 아래의 SQL을 query transformer가 어떻게 변경했는지 확인하시오 !   
  이걸 확인하는 이유 ?  내가 원하는 실행계획이 안나오는 경우에 확인이 필요
-```
+```sql
 select ename, sal, job
   from emp
   where job in ('SALESMAN', 'ANALYST');
 ```
 답:
-```
+```sql
 explain plan for
 select ename, sal, job
   from emp
@@ -33,7 +33,7 @@ select * from table(dbms_xplan.display);
 <img src="https://github.com/goguma999/newjourney/blob/main/002-2.png" >
 → 1 - filter("JOB"='ANALYST' OR "JOB"='SALESMAN')  <-- 이게 보일텐데,
 
-```
+```sql
 select ename, sal, job
   from emp
   where job ='ANALYST' or job='SALESMAN'; 
@@ -45,14 +45,14 @@ select ename, sal, job
 &nbsp;
 
 🔷문제4. 아래의 SQL을 어떻게 쿼리 변형을 했는지 확인하시오 !
-```
+```sql
 select deptno, job, sum(sal)
   from emp
   group by grouping sets( (deptno), (job) );
 ```
 
 답:  
-```
+```sql
 explain plan for 
 select deptno, job, sum(sal)
   from emp
