--- a/문자함수.md
+++ b/문자함수.md
@@ -23,7 +23,7 @@
 
 ## STRCMP
 0: 두 문자열이 같을 때<br>
--1: 첫 번째 문자열이 두 번째 문자열보다 작을 때
+-1: 첫 번째 문자열이 두 번째 문자열보다 작을 때<br>
 1: 첫 번째 문자열이 두 번째 문자열보다 클 때
 ```sql 
 SELECT STRCMP('apple','banana') AS result;
