--- a/문자함수.md
+++ b/문자함수.md
@@ -18,7 +18,7 @@
 | `REPLACE(str, from, to)`    | `REPLACE(str, from, to)`|
 | `REPEAT(str, count)`        | `RPAD(str, LENGTH(str) * count, str)` |
 | `REVERSE(str)`              | -                      |
-| `STRCMP(str1, str2)`        | `COMPARE(str1, str2)`   |
+| `STRCMP(str1, str2)`        | -                      |
 | -                            | `REGEXP_SUBSTR`         |
 
 ## STRCMP
@@ -26,6 +26,7 @@
 -1: 첫 번째 문자열이 두 번째 문자열보다 작을 때<br>
 1: 첫 번째 문자열이 두 번째 문자열보다 클 때
 ```sql 
-SELECT STRCMP('apple','banana') AS result;
-# 1
+SELECT STRCMP('apple', 'banana') AS result; -- -1
+SELECT STRCMP('grape', 'apple') AS result;  -- 1
+SELECT STRCMP('orange', 'orange') AS result; -- 0
 ```
