--- a/문자함수.md
+++ b/문자함수.md
@@ -22,6 +22,7 @@
 | -                            | `REGEXP_SUBSTR`         |
 
 ## STRCMP
+*문자열의 크기는 사전순서 기준<br>
 0: 두 문자열이 같을 때<br>
 -1: 첫 번째 문자열이 두 번째 문자열보다 작을 때<br>
 1: 첫 번째 문자열이 두 번째 문자열보다 클 때
