--- a/숫자함수-날짜함수.md
+++ b/숫자함수-날짜함수.md
@@ -28,7 +28,6 @@
 | `CURRENT_TIME()`              | -                            | 현재 시간 반환                                                         |
 | `NOW()`                       | `SYSDATE``CURRENT_TIMESTAMP` | 현재 날짜와 시간 반환                                                     |
 | `CURRENT_TIMESTAMP()`         | `CURRENT_TIMESTAMP`          | 현재 날짜와 시간 반환                                                     |
-|--------------------------------|-------------------------------|---------------------------------------------------------------------------|
 | `SECOND(time)`                | `TO_CHAR(SYSDATE, 'SS')`     | 시간에서 초(second)를 추출                                                  |
 | `MINUTE(time)`                | `TO_CHAR(SYSDATE, 'MI')`     | 시간에서 분(minute)을 추출                                                  |
 | `HOUR(time)`                  | `TO_CHAR(SYSDATE, 'HH24')`     | 시간에서 시(hour)를 추출                                                  |
@@ -40,7 +39,6 @@
 | `MONTHNAME(date)`             | `TO_CHAR(date, 'Month')`     | 날짜에서 월 이름 반환                                                    |
 | `DAYOFWEEK(date)`             | `TO_CHAR(date, 'D')`         | 날짜에서 요일 번호 반환 (일요일=1)                                     |
 | `EXTRACT(unit FROM date)`     | `EXTRACT(unit FROM date)`    | 날짜에서 지정한 단위 (연도, 월, 일 등) 추출                              |
-|--------------------------------|-------------------------------|---------------------------------------------------------------------------|
 | `DATE_FORMAT(date, format)`   | `TO_CHAR(date, format)`      | 날짜를 지정한 형식의 문자열로 변환                                        |
 | `DATEDIFF(date1, date2)`      | `date1 - date2`              | 두 날짜 간의 일(day) 차이 계산                                            |
 | `TIMEDIFF(time1, time2)`      | -                            | 두 시간 간의 시간 차이 계산 해서 시:분:초로 반환                                             |
@@ -54,5 +52,5 @@
 ```sql
 SELECT DATE_FORMAT('2024-12-27 11:44:35','%Y년 %m월 %d일 %H시 %i분 %s초');
 ```
-
+<img src="images/mysql-date-format.png" alt="MySQL-date-format" width="600">
 
