--- a/숫자함수-날짜함수.md
+++ b/숫자함수-날짜함수.md
@@ -52,5 +52,5 @@
 ```sql
 SELECT DATE_FORMAT('2024-12-27 11:44:35','%Y년 %m월 %d일 %H시 %i분 %s초');
 ```
-<img src="images/mysql-date-format.png" alt="MySQL-date-format" width="600">
+<img src="https://github.com/goguma999/TIL/blob/main/images/mysql-date-format.png" alt="MySQL-date-format" width="600">
 
