--- a/MySQL/집합연산.md
+++ b/MySQL/집합연산.md
@@ -5,7 +5,7 @@ FROM mypokemon
 UNION ALL
 SELECT name
 FROM friendpokemon
-ORDER BY number;  # mypokemon에서 가져온 컬럼으로만 가능
+ORDER BY number;  # A에서 가져온 컬럼으로만 가능
 ```
 
 ## 교집합 (MySQL)
@@ -24,20 +24,20 @@ FROM mypokemon A
 LEFT JOIN friendpokemon B
 ON A.number = B.number AND A.name = B.name AND A.type = B.type
   AND A.attack = B.attack AND A.defense = B.defense
-WHERE B.name IS NULL;
+  WHERE B.name IS NULL;        # B에서 null인 것 = A만 있는 것
 ``` 
 
 ## INTERSECT (Oracle)
 ```sql
 SELECT deptno, sum(sal)
-FROM emp
-WHERE deptno in (10, 20)
-GROUP BY deptno
-INTERSECT
-SELECT deptno, sum(sal)
-FROM emp
-WHERE DEPTNO in (20, 30)
-GROUP BY deptno;
+  FROM emp
+  WHERE deptno in (10, 20)
+  GROUP BY deptno
+  INTERSECT
+  SELECT deptno, sum(sal)
+  FROM emp
+  WHERE DEPTNO in (20, 30)
+  GROUP BY deptno;
 ```
 
 ## MINUS (Oracle)
