--- a/MySQL/숫자함수-날짜함수.md
+++ b/MySQL/숫자함수-날짜함수.md
@@ -38,7 +38,7 @@
 | `DAYNAME(date)`               | `TO_CHAR(date, 'Day')`       | 날짜에서 요일 이름 반환                                                  |
 | `MONTHNAME(date)`             | `TO_CHAR(date, 'Month')`     | 날짜에서 월 이름 반환                                                    |
 | `DAYOFWEEK(date)`             | `TO_CHAR(date, 'D')`         | 날짜에서 요일 번호 반환 (일요일=1)                                     |
-| `EXTRACT(unit FROM date)`     | `EXTRACT(unit FROM date)`    | 날짜에서 지정한 단위 (연도, 월, 일 등) 추출                              |
+| `EXTRACT(MONTH FROM date)`     | `EXTRACT(MONTH FROM date)`    | 날짜에서 지정한 단위 (연도, 월, 일 등) 추출                              |
 | `DATE_FORMAT(date, format)`   | `TO_CHAR(date, format)`      | 날짜를 지정한 형식의 문자열로 변환                                        |
 | `DATEDIFF(date1, date2)`      | `date1 - date2`              | 두 날짜 간의 일(day) 차이 계산                                            |
 | `TIMEDIFF(time1, time2)`      | -                            | 두 시간 간의 시간 차이 계산 해서 시:분:초로 반환                                             |
