--- a/MySQL/윈도우함수.md
+++ b/MySQL/윈도우함수.md
@@ -1,5 +1,5 @@
 # 윈도우함수
-## 1. 집계 함수 : SUM, AVG, COUNT, MAX, MIN
+## 1. 집계 : SUM, AVG, COUNT, MAX, MIN
 ```sql
 SELECT empno, ename, deptno, sal,
        SUM(sal) OVER (PARTITION BY deptno) AS dept_sal_sum, # 부서별 누적
@@ -7,7 +7,7 @@ SELECT empno, ename, deptno, sal,
 FROM EMP;
 ```
 
-## 2. 순위 함수: RANK, DENSE_RANK, ROW_NUMBER
+## 2. 순위 : RANK, DENSE_RANK, ROW_NUMBER, NTILE, PERCENT_RANK 
 ```sql
 SELECT name, attack,
   RANK() OVER (ORDER BY attack DESC) AS rank_rank,             #RANK: 공동 순위가 있으면 다음 순서로 건너뜀 
@@ -15,8 +15,14 @@ SELECT name, attack,
   ROW_NUMBER() OVER (ORDER BY attack DESC) AS rank_row_number
 FROM mypokemon;
 ```
+```sql
+select ID, SIZE_OF_COLONY,
+    NTILE(n) over (order by SIZE_OF_COLONY desc) as ntile         # 1 ~ n
+    PERCENT_RANK() over (order by SIZE_OF_COLONY desc) as pctrnk  # 전체 값에서 상대적인 위치를 백분율로 변환(0~1)
+from ECOLI_DATA
+```
 
-## 3. 오프셋 함수 : LAG, LEAD 
+## 3. 오프셋 : LAG, LEAD 
 ```sql
 SELECT empno, ename, sal,
        LAG(sal, 1, 0) OVER (ORDER BY sal DESC) AS prev_salary, # 현재 행의 이전(1칸 앞) 급여 # 없으면 0 반환)
