--- a/MySQL/문자함수.md
+++ b/MySQL/문자함수.md
@@ -13,13 +13,25 @@
 | `RTRIM(str)`                | `RTRIM(str,'잘라낼철자')`            |
 | `LPAD(str, len, padstr)`    | `LPAD(str, len, padstr)`|
 | `RPAD(str, len, padstr)`    | `RPAD(str, len, padstr)`|
-| `CONCAT(str1, str2, ...)`   | `CONCAT(str1, str2, ...)`,`||` |
+| `CONCAT(str1, str2, ...)`   | `CONCAT(str1, str2, ...)`|
 | `LOCATE(substr, str)`       | `INSTR(str, substr)`    |
 | `REPLACE(str, from, to)`    | `REPLACE(str, from, to)`|
 | `REPEAT(str, count)`        | `RPAD(str, LENGTH(str) * count, str)` |
 | `REVERSE(str)`              | -                      |
 | `STRCMP(str1, str2)`        | -                      |
 | -                            | `REGEXP_SUBSTR`         |
+
+## GROUP_CONCAT(Mysql) vs LISTAGG(Oracle)
+```sql
+SELECT dept, GROUP_CONCAT(ename ORDER BY ename SEPARATOR ', ') AS employees
+  FROM emp
+  GROUP BY dept;   # group by로 묶어줘야 함 
+```
+```sql
+SELECT dept,
+      LISTAGG(employee_name, ', ') WITHIN GROUP (ORDER BY ename) OVER (PARTITION BY dept) AS employees
+  FROM emp;   # group by 없음 / over() 윈도우 가능
+```
 
 ## STRCMP
 *문자열의 크기는 사전순서 기준<br>
