--- a/MySQL/문자함수.md
+++ b/MySQL/문자함수.md
@@ -32,6 +32,11 @@ SELECT dept,
       LISTAGG(employee_name, ', ') WITHIN GROUP (ORDER BY ename) OVER (PARTITION BY dept) AS employees
   FROM emp;   # group by 없음 / over() 윈도우 가능
 ```
+## CONCAT_WS
+```sql
+CONCAT_WS(' ',CITY,STREET_ADDRESS1,STREET_ADDRESS2) AS 전체주소,
+CONCAT_WS('-',left(TLNO,3),substring(TLNO,4,4),right(TLNO,4)) AS 전화번호
+```
 
 ## STRCMP
 *문자열의 크기는 사전순서 기준<br>
