--- a/이중차분법.md
+++ b/이중차분법.md
@@ -1,12 +1,7 @@
 # [DA] 이중차분법
-
-출발~: 2025/02/26
-파트: DA
-
 ### 📍A/B 테스트
 
 - A와 B를 대조하여 가설을 검정하는 실험방법
-    
     즉, 결과와 상관성이 높다고 생각되는 변수를 테스트를 통해 검정하는 방법
     
 - ex
@@ -15,7 +10,7 @@
     - 가설3: 5% 할인쿠폰보다 5천원 할인쿠폰이 주문이 더 많이 일어날 것이다.
     - 상관성이 높은 독립변수를 찾아서 개선, 매출 높이고자.
 - 단점
-    - A/B Test 설계 시, 샘플 사이즈 및 실험기간 계산, 유의성 검증 등 고급 통게지식 기반
+    - A/B Test 설계 시, 샘플 사이즈 및 실험기간 계산, 유의성 검증 등 고급 통계지식 기반
     - 설정한 독립변수 이외의 변수들을 완벽하게 통제하기 어려움
     - 경우에 따라 테스트 비용이 많이 든다.
 
@@ -27,7 +22,7 @@
 - 대조군과 실험군 두 그룹의 처치 시점 전후 지표 비교
     - 즉, 트리트먼트 그룹의 처치 없이도 나타날 결과를 측정하기 위함으로, 컨트롤 그룹의 처치 전후 지표와 시계열 데이터 비교
 
-![스크린샷 2025-02-27 오후 6.50.12.png](%5BDA%5D%20%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%AE%E1%86%BC%E1%84%8E%E1%85%A1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%87%E1%85%A5%E1%86%B8%201a59dc3843b580b6884ce7bff1e117ed/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-02-27_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_6.50.12.png)
+![이중차분법1](이중차분법1.png)
 
 ### 📍문제인식 ~ 가설수립 ~ 결론도출
 
@@ -94,12 +89,24 @@
     where period is not null
     group by 1,2 ;
     ```
-    
-    ![스크린샷 2025-02-27 오후 8.20.20.png](%5BDA%5D%20%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%AE%E1%86%BC%E1%84%8E%E1%85%A1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%87%E1%85%A5%E1%86%B8%201a59dc3843b580b6884ce7bff1e117ed/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-02-27_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_8.20.20.png)
+
+    | group        | period | ord_cnt |
+|-------------|--------|--------|
+| CONTROL     | 처치 전 | 62     |
+| CONTROL     | 처치 후 | 56     |
+| TEST1_정율  | 처치 전 | 36     |
+| TEST1_정율  | 처치 후 | 40     |
+| TEST2_정액  | 처치 전 | 61     |
+| TEST2_정액  | 처치 후 | 62     |
+
     
 5. 결론 도출
-    
-    ![스크린샷 2025-02-27 오후 8.20.47.png](%5BDA%5D%20%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%AE%E1%86%BC%E1%84%8E%E1%85%A1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%87%E1%85%A5%E1%86%B8%201a59dc3843b580b6884ce7bff1e117ed/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-02-27_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_8.20.47.png)
+| 그룹/CVR       | 처치 전 | 처치 후 | 처치후 - 처치전 | 이중차분 |
+|--------------|--------|--------|-------------|----------|
+| Control     | 62%    | 56%    | -6%         | -        |
+| Test1_정율  | 36%    | 40%    | 4%          | 4% - (-6%) = **10%** |
+| Test2_정액  | 61%    | 62%    | 1%          | 1% - (-6%) = **7%** |    
+
     
     - Control : 쿠폰 안 받은, 어떤 처치도 받지 않은 자연스러운 결과. 시간에 따른 변화값
     - Test1과 Test2의 결과값이 오로지 쿠폰 처치 때문이라고 할 수 없기 때문에 자연스러운 시간의 흐름에 따른 결과값을 한 번 더 뺌, 즉 이중차분 해줌
