--- a/이중차분법.md
+++ b/이중차분법.md
@@ -100,15 +100,16 @@
 
     
 5. 결론 도출  
-| 그룹/CVR       | 처치 전 | 처치 후 | 처치후 - 처치전 | 이중차분 |
-|--------------|--------|--------|-------------|----------|
-| Control     | 62%    | 56%    | -6%         | -        |
-| Test1_정율  | 36%    | 40%    | 4%          | 4% - (-6%) = **10%** |
-| Test2_정액  | 61%    | 62%    | 1%          | 1% - (-6%) = **7%** |    
+| 그룹/CVR    | 처치 전 | 처치 후 | 처치후 - 처치전 | 이중차분 |
+|------------|--------|--------|-------------|----------|
+| Control    | 62%    | 56%    | -6%         | -        |
+| Test1_정율 | 36%    | 40%    | 4%          | 4% - (-6%) = **10%** |
+| Test2_정액 | 61%    | 62%    | 1%          | 1% - (-6%) = **7%** |   
 
----
-    - Control : 쿠폰 안 받은, 어떤 처치도 받지 않은 자연스러운 결과. 시간에 따른 변화값
-    - Test1과 Test2의 결과값이 오로지 쿠폰 처치 때문이라고 할 수 없기 때문에 자연스러운 시간의 흐름에 따른 결과값을 한 번 더 뺌, 즉 이중차분 해줌
-    - Test1과 Test2의 이중차분값 차이가 3%.
-        - 작아서 정율쿠폰과 정액쿠폰의 차이가 없다 = 정액쿠폰의 주문전환율이 더 높을 것이다 라는 가설을 drop할 수 있음
-        - 하지만 주제, 도메인, 현업마다 해석의 여지 다름
+- Control : 쿠폰 안 받은, 어떤 처치도 받지 않은 자연스러운 결과. 시간에 따른 변화값
+- Test1과 Test2의 결과값이 오로지 쿠폰 처치 때문이라고 할 수 없기 때문에 자연스러운 시간의 흐름에 따른 결과값을 한 번 더 뺌, 즉 이중차분 해줌
+- Test1과 Test2의 이중차분값 차이가 3%.
+    - 작아서 정율쿠폰과 정액쿠폰의 차이가 없다 = 정액쿠폰의 주문전환율이 더 높을 것이다 라는 가설을 drop할 수 있음
+    - 하지만 주제, 도메인, 현업고려해서 해석 필요
+ 
+
