--- a/로그데이터분석.md
+++ b/로그데이터분석.md
@@ -19,13 +19,13 @@
 3. 측정인원 : 40명
 4. `log_table`
     
-    ![bnr1 = bnr1을 클릭해서 유입됨](%5BDA%5D%20%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%83%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%90%E1%85%A5%20%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%201af9dc3843b580438435f9bd07e6091f/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-03-07_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_9.53.00.png)
+    <img src="img/log1.png" alt="log1">
     
     bnr1 = bnr1을 클릭해서 유입됨
     
     `order_master_log`
     
-    ![스크린샷 2025-03-07 오후 9.55.42.png](%5BDA%5D%20%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%83%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%90%E1%85%A5%20%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%201af9dc3843b580438435f9bd07e6091f/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-03-07_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_9.55.42.png)
+    <img src="img/log2.png" alt="log2">
     
 5. sql 분석
     
@@ -41,7 +41,7 @@
     )
     ```
     
-    ![스크린샷 2025-03-07 오후 10.29.59.png](%5BDA%5D%20%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%83%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%90%E1%85%A5%20%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%201af9dc3843b580438435f9bd07e6091f/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-03-07_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_10.29.59.png)
+    <img src="img/log3.png" alt="log3">
     
     ```sql
     , ord as (
@@ -63,7 +63,7 @@
     )
     ```
     
-    ![스크린샷 2025-03-07 오후 11.06.28.png](%5BDA%5D%20%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%83%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%90%E1%85%A5%20%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%201af9dc3843b580438435f9bd07e6091f/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-03-07_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_11.06.28.png)
+    <img src="img/log4.png" alt="log4">
     
     ```sql
     , ord2 as (
@@ -80,6 +80,6 @@
     group by 1 ;
     ```
     
-    ![스크린샷 2025-03-07 오후 11.09.14.png](%5BDA%5D%20%E1%84%85%E1%85%A9%E1%84%80%E1%85%B3%E1%84%83%E1%85%A6%E1%84%8B%E1%85%B5%E1%84%90%E1%85%A5%20%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%201af9dc3843b580438435f9bd07e6091f/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2025-03-07_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_11.09.14.png)
+    <img src="img/log5.png" alt="log5" width="400">
     
     → 각각의 샘플 사이즈가 같고, bnr2가 bnr1보다 4배 더 큰 주문률. (다만 작은 샘플 데이터이기 때문에 유의미한 차이라고 말하기 어려움.)
