--- a/로그데이터분석.md
+++ b/로그데이터분석.md
@@ -25,7 +25,7 @@
     
     `order_master_log`
     
-    <img src="img/log2.png" alt="log2">
+    <img src="img/log2.png" alt="log2" width="400">
     
 5. sql 분석
     
