--- a/로그데이터분석.md
+++ b/로그데이터분석.md
@@ -18,10 +18,9 @@
 2. 독립변수 : 배너 유형(bnr1 / bnr2)
 3. 측정인원 : 40명
 4. `log_table`
-    
+    *bnr1 = bnr1을 클릭해서 유입됨
     <img src="img/log1.png" alt="log1">
     
-    bnr1 = bnr1을 클릭해서 유입됨
     
     `order_master_log`
     
